tests/compile-fail/sync/libc_pthread_rwlock_unlock_unlocked.stderr
error: Undefined Behavior: unlocked an rwlock that was not locked by the active thread
  --> $DIR/libc_pthread_rwlock_unlock_unlocked.rs:10:9
   |
10 |         libc::pthread_rwlock_unlock(rw.get()); //~ ERROR was not locked
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unlocked an rwlock that was not locked by the active thread
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/libc_pthread_rwlock_unlock_unlocked.rs:10:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

